--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,96 @@
-p {
-    color: red;
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Roboto;
 }
+
+:root {
+    --primary-blue: #2596be;
+    --content-gray: #e2e8f0;
+}
+
+body {
+    background-color: var(--content-gray);
+}
+
+.container {
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr;
+    grid-template-rows: 1fr 4fr;
+}
+
+.header {
+    background-color: white;
+    grid-row: 1 / 2;
+    grid-column: 2 / 4;
+    box-shadow: 0px 6px 7px rgb(184, 184, 184);
+    margin-bottom: 10px;
+}
+
+.dashboard {
+    grid-row: 1 / 3;
+    grid-column: 1 / 2;
+
+    padding: 12px;
+    font-weight: 600;
+    background-color: var(--primary-blue);
+
+    display: flex;
+    flex-direction: column;
+}
+
+.projects {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+    border: 2px solid black;
+}
+
+.side-content {
+    grid-row: 2 / 3;
+    grid-column: 3 / 4
+}
+
+.icon {
+    width: 2em;
+    height: 2em;
+    filter: invert(1) grayscale(100%) contrast(100%);
+}
+
+.logo-icon {
+    width: 4em;
+    height: 4em;
+    filter: invert(1) grayscale(100%) contrast(100%);
+}
+
+.logo-text,
+.dash-text {
+    color: white;
+    font-size: 24px;
+}
+
+.logo-text {
+    font-size: 36px;
+}
+
+.navigation {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    margin: 40px 0px;
+}
+
+.nav-item {
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    gap: 18px;
+    padding: 0 12px;
+}
+
+.dashboard .nav-item:first-child {
+    align-self: start;
+}
+
+
+
