--- a/styles.css
+++ b/styles.css
@@ -20,13 +20,115 @@ body {
     grid-template-rows: 1fr 4fr;
 }
 
+/* Header Section */
+
 .header {
     background-color: white;
     grid-row: 1 / 2;
     grid-column: 2 / 4;
     box-shadow: 0px 6px 7px rgb(184, 184, 184);
     margin-bottom: 10px;
+
+    display: grid;
+    grid-template-rows: 1fr 1fr;
 }
+
+.header-top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 24px;
+    /* border: 1px solid black; */
+}
+
+.header-bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 24px;
+    /* border: 1px solid black; */
+}
+
+.search {
+    display: flex;
+    align-items: center;
+    gap: 7px;
+    /* padding: 12px; */
+}
+
+input {
+    border-radius: 16px;
+    border: none;
+    background-color: var(--content-gray);
+    height: 30px;
+    width: 40vw;
+}
+
+.header-icon {
+    width: 30px;
+    height: 30px;
+}
+
+.profile-icons {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+
+.profile-icon-large {
+    height: 48px;
+    width: 48px;
+    border-radius: 100px;
+    border: 1px solid black;
+}
+
+.profile-icon-small {
+    height: 36px;
+    width: 36px;
+    border-radius: 100px;
+    border: 1px solid black;
+}
+
+.header-text {
+    font-weight: 800;
+    font-size: 24px;
+}
+
+.profile-handle {
+    display: flex;
+    gap: 24px;
+    align-items: center;
+    padding-bottom: 12px;
+    padding-left: 12px;
+}
+
+.header-greeting {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+
+.header-greeting > .header-text {
+    font-size: 30px;
+}
+
+.action-buttons {
+    display: flex;
+    align-items: center;
+    gap: 18px;
+    padding-right: 18px;
+    padding-bottom: 12px;
+}
+
+button {
+    background: var(--primary-blue);
+    padding: 10px 36px;
+    color: white;
+    border-radius: 24px;
+    border: none;
+}
+
+/* Dashboard Section */
 
 .dashboard {
     grid-row: 1 / 3;
@@ -38,17 +140,6 @@ body {
 
     display: flex;
     flex-direction: column;
-}
-
-.projects {
-    grid-row: 2 / 3;
-    grid-column: 2 / 3;
-    border: 2px solid black;
-}
-
-.side-content {
-    grid-row: 2 / 3;
-    grid-column: 3 / 4
 }
 
 .icon {
@@ -84,13 +175,26 @@ body {
     display: flex;
     align-items: center;
     box-sizing: border-box;
-    gap: 18px;
+    gap: 30px;
     padding: 0 12px;
 }
 
 .dashboard .nav-item:first-child {
     align-self: start;
 }
+
+.projects {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+    border: 2px solid black;
+}
+
+.side-content {
+    grid-row: 2 / 3;
+    grid-column: 3 / 4
+}
+
+
 
 
 
