--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 .container {
     height: 100vh;
     display: grid;
-    grid-template-columns: 1fr 4fr 1fr;
+    grid-template-columns: 1fr 3fr 1fr;
     grid-template-rows: 1fr 4fr;
 }
 
@@ -73,6 +73,7 @@ input {
     display: flex;
     align-items: center;
     gap: 40px;
+    padding-right: 24px;
 }
 
 .profile-icon-large {
@@ -90,8 +91,8 @@ input {
 }
 
 .header-text {
-    font-weight: 800;
-    font-size: 24px;
+    font-weight: 700;
+    font-size: 18px;
 }
 
 .profile-handle {
@@ -179,22 +180,38 @@ button {
     padding: 0 12px;
 }
 
-.dashboard .nav-item:first-child {
-    align-self: start;
+.nav-item:has(p.logo-text) {
+    gap: 12px;
 }
+
+/* Projects section */
+/* TODO: style and layout projects */
 
 .projects {
     grid-row: 2 / 3;
     grid-column: 2 / 3;
-    border: 2px solid black;
+    padding: 24px;
+    border: 1px solid black;
+}
+
+.card-container {
+    padding: 24px 0;
+    display: grid;
+    justify-content: space-evenly;
+    grid-template-columns: repeat(2, minmax(350px, 40%));
+    grid-template-rows: repeat(auto-fit, minmax(1fr, 250px));
+    gap: 24px;
+}
+
+.project-card {
+    border: 1px solid black;
+    padding: 12px;
+    box-sizing: border-box;
 }
 
 .side-content {
     grid-row: 2 / 3;
-    grid-column: 3 / 4
+    grid-column: 3 / 4;
+    padding: 12px;
+    border: 1px solid black;
 }
-
-
-
-
-
